compute gyroradii and debye lengths, and configure hpic simulation domain to be a fixed number of gyroradii

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 __pycache__
 
 # Generated bash scripts to run simulations
-solpsTargInner.sh
-solpsTargOuter.sh
+scripts/run-hpic*.sh
 
 # Output directory holding simulation results
 hpic_results/
